# repo-minder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml  repo_minder.py  standardize_licenses.py
.beads/: issues.jsonl
.github/workflows/: ci.yml
templates/: base.j2  cis.j2  disa.j2
tests/: README.md  conftest.py  test_ai_assisted.py  test_cli.py  test_configuration.py  test_detection.py  test_functional.py  test_interactive.py  test_jinja2.py  test_jinja2_equivalence.py  test_safety.py  test_template_detection_contract.py  test_templates.py  test_ux_and_skip_logic.py
tests/fixtures/: LICENSE_TEMPLATE_CIS_AI.md  LICENSE_TEMPLATE_DISA_AI.md  LICENSE_TEMPLATE_PLAIN_AI.md
utils/: check_fork_licenses.py
