[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["repo_minder"]

[project]
name = "mitre-repo-minder"
version = "1.0.0"
description = "Repository file standardization and compliance tool for MITRE"
authors = [
    {name = "MITRE SAF Team", email = "saf@mitre.org"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["repository", "compliance", "mitre", "automation", "github", "license", "standards"]
dependencies = [
    "jinja2>=3.0.0",
    "questionary>=1.10.0",
    "rich>=13.8.1",
    "typer>=0.19.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/mitre/repo-minder"
Repository = "https://github.com/mitre/repo-minder"
Issues = "https://github.com/mitre/repo-minder/issues"

[project.scripts]
repo-minder = "repo_minder:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "T201",  # Print statements (expected in CLI tool)
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.bandit]
exclude_dirs = ["tests", ".git", "__pycache__"]
skips = ["B603", "B607"]  # subprocess without shell=True is OK

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py", "__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "ruff>=0.14.9",
]
